# agent-office

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/domain/: mod.rs
src/services/: mod.rs
src/services/kb/: domain.rs  mod.rs
src/services/mail/: domain.rs  mod.rs
src/services/schedule/: domain.rs  mod.rs  service_impl.rs
src/storage/: memory.rs  mod.rs  postgres.rs
src/web/: mod.rs  schedules.rs  templates.rs
tests/: integration_test.rs
