[package]
name = "agent-office"
version = "0.1.9"
edition = "2024"
license = "MIT"
description = "A Rust-based multi-agent system with graph-structured data storage, mail system, and Zettelkasten-style knowledge base"
readme = "README.md"
repository = "https://github.com/steveyegge/agent-office"
authors = ["Steve Yegge"]
keywords = ["agent", "multi-agent", "graph", "mail", "knowledge-base"]
categories = ["web-programming", "command-line-utilities"]
rust-version = "1.85.0"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.13.1", features = ["v4", "serde", "v5"] }
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.86"
thiserror = "2.0.11"
anyhow = "1.0.95"
dotenvy = "0.15.7"
axum = { version = "0.8.8", features = ["tokio", "macros"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }

[dev-dependencies]
tokio-test = "0.4.4"
